--- a/parte2/Practica-Parte-II.Rmd
+++ b/parte2/Practica-Parte-II.Rmd
@@ -13,6 +13,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+\
 **Introducción**
 
 En este trabajo se va a realizar un análisis de un dataset que contiene información sobre conexiones de red. El objetivo es identificar si una conexión es benigna o maligna, es decir, si se trata de un keylogger o no. Para ello, se utilizarán distintos algoritmos de machine learning y se compararán los resultados obtenidos. El cuaderno se dividirá en las siguientes secciones:
@@ -792,14 +793,16 @@ modnn %>% fit(
   class_weight = class_weights
 )
 
-modnn2 <- modnn
-# Guardamos el modelo de la red neuronal en Python
-save_model_hdf5(modnn, "neural_network_model.keras")
+# Guardamos el modelo de la red neuronal
+py$model <- modnn
+py_run_string("model.save('model.keras')")
 ```
 
 ```{r}
 # Cargamos la red neuronal de Python y lo pasamos a R
-modnn <- load_model_hdf5("neural_network_model.keras")
+py_run_string("import keras")
+py_run_string("model = keras.models.load_model('model.keras')")
+modnn <- py$model
 
 # Realizamos las predicciones con el conjunto de test
 test.numeric <- as.matrix(as.numeric(test$Class))
