--- a/parte2/Practica-Parte-II.Rmd
+++ b/parte2/Practica-Parte-II.Rmd
@@ -51,6 +51,7 @@ set.seed(12345)
 
 Para que el cuaderno se pueda compilar rápidamente, vamos a cargar previamente los resultados que nos hagan falta. De esta forma, podremos dejar celdas sin ejecutar pero mostrando el código. 
 
+\
 # Exploración del dataset y agrupación de variables. {#agrupacion}
 En esta sección analizaremos las variables del dataset y las agruparemos por temáticas. Se describirá el significado de cada grupo de características identificado.
 
@@ -112,7 +113,7 @@ Dentro de esta agrupación surge otro subgrupo, ya que existen otras variables q
   
 --Falta completar el 10, añadir act_data_pkt_fwd y min_seg_size_forward, revisar si coinciden el número de variables con las mencionadas aquí y ordenar por orden de aparición en el dataset (opcional). La variable Fwd.Header.Length.1 sobra en el dataset porque es igual a Fwd.Header.Length--
   
-
+\
 # Preprocesamiento de los datos. {#preprocesamiento}
 Antes de empezar con los análisis se deben preprocesar los datos. En esta sección se explicarán los preprocesamientos realizados y sus razonamientos.
 
@@ -152,10 +153,9 @@ print(tabla.contingencia)
 ```
 
 Se puede ver cómo todos los valores que no son "0" en "CWE.Flag.Count" son "Keylogger". Esto quiere decir que la variable "CWE.Flag.Count" es un predictor muy importante para el análisis que queremos realizar del dataset. Además, esto puede indicarnos que los valores que no son "0" pueden ser un tipo de vulnerabilidad del sistema. Por ello, para poder trabajar de forma más estándar con esta variable, vamos a convertir los valores anómalos a "1", de forma que solo tenga valores "0" y "1".
-```{r, eval = FALSE}
+```{r}
 # Convertimos los valores anómalos a 1
-mydf$CWE.Flag.Count <- ifelse(mydf$CWE.Flag.Count == "0", "1", mydf$CWE.Flag.Count)
-mydf$CWE.Flag.Count <- as.numeric(mydf$CWE.Flag.Count)
+mydf$CWE.Flag.Count <- ifelse(mydf$CWE.Flag.Count != "0", "1", mydf$CWE.Flag.Count)
 ```
 
 Ahora vamos a comprobar los valores nulos del dataset y ver cómo los tratamos. Empecemos viendo la cantidad de filas con nulos.
@@ -187,6 +187,7 @@ Vamos a eliminar las columnas con desviación estándar cero. Para ello, psaremo
 ```{r, eval = FALSE}
 # Pasamos a numérico las variables que les corresponde
 mydf$Packet.Length.Std <- as.numeric(mydf$Packet.Length.Std)
+mydf$CWE.Flag.Count <- as.numeric(mydf$CWE.Flag.Count)
 
 # Seleccionamos las columnas numéricas
 num_cols <- which(sapply(mydf, is.numeric))
@@ -196,19 +197,6 @@ constant_cols <- which(sapply(mydf[, num_cols], sd) == 0)
 
 # Eliminamos las columnas con valores constantes
 mydf <- mydf[, -constant_cols]
-```
-
-Finalmente, volvemos a hacer una revisión de las variables del dataset y asignamos los tipos correspondientes a cada variable.
-```{r, eval = FALSE}
-# Pasamos los que tienen valores 0, 1 a factor.
-mydf$Fwd.PSH.Flags <- as.factor(mydf$Fwd.PSH.Flags)
-mydf$FIN.Flag.Count <- as.factor(mydf$FIN.Flag.Count)
-mydf$SYN.Flag.Count <- as.factor(mydf$SYN.Flag.Count)
-mydf$PSH.Flag.Count <- as.factor(mydf$PSH.Flag.Count)
-mydf$ACK.Flag.Count <- as.factor(mydf$ACK.Flag.Count)
-mydf$URG.Flag.Count <- as.factor(mydf$URG.Flag.Count)
-mydf$CWE.Flag.Count <- as.factor(mydf$CWE.Flag.Count)
-mydf$Class <- as.factor(mydf$Class)
 ```
 
 Guardamos el dataset procesado.
@@ -242,6 +230,7 @@ table(mydf$Class) / nrow(mydf) * 100
 
 Vemos que la proporción de casos positivos y negativos no cambia. Por lo tanto, el dataset procesado sirve para trabajar. 
 
+\
 # Sampleo de los datos. {#sampleo}
 Para poder trabajar con holgura a lo largo de la práctica, vamos a coger una muestra del dataset original del 20%. De esta forma, los tiempos de ejecución serán menores y podremos trabajar más rápido.
 ```{r, eval = FALSE}
@@ -253,7 +242,7 @@ write.csv(mydf.sample, "sampled.csv", row.names = FALSE)
 ```
 
 Una vez tenemos el dataset sampleado, vamos a comprobar que la proporción de casos positivos y negativos no ha cambiado.
-```{r, eval = FALSE}
+```{r}
 mydf.sample <- read.csv("sampled.csv", header = TRUE, sep = ",")
 
 # Porcentaje de valores positivos y negativos en el dataset sampleado
@@ -263,9 +252,10 @@ table(mydf.sample$Class) / nrow(mydf.sample) * 100
 table(mydf.original$Class) / nrow(mydf.original) * 100
 ```
 
-
+\
 # Análisis PCA. {#pca}
 
+\
 ## Carga del dataset sampleado
 
 Primero de todo hay que volver a cargar el dataset sampleado. Además, se deben volver a pasar a factor las variables que lo requieran.
@@ -288,6 +278,7 @@ mydf$Class <- as.factor(mydf$Class)
 mydf$Class <- relevel(mydf$Class, ref = "Benign")
 ```
 
+\
 ## Análisis del PCA
 
 Vamos a realizar el PCA con el conjunto preprocesado. Primero, seleccionamos las columnas numéricas.
@@ -343,7 +334,7 @@ Como el dataset tiene demasiadas variables, el biplot se guarda en un .png para 
 
 Por todo esto, podemos ver que la elaboración de un modelo de clasificación que identifique conexiones de keystrokes va a ser un problema complicado. Tenemos muchos predictores y ver las relaciones entre ellos no va a ser una tarea sencilla. Si intentásemos reducir la dimensionalidad del problea con PCA como mucho podríamos reducir a 11 dimensiones, lo cual sigue siendo una gan cantidad de variables.
 
-
+\
 # Regresión logística. {#regresion-logistica}
 Vamos a intentar predecir si una conexión es benigna o maligna mediante un modelo de regresión logística. Realizaremos unas predicciones con el resultado del modelo y veremos cómo funciona para el dataset. No usaremos conjunto de prueba ni de test, ya que simplemente queremos ver cómo de eficaz es con nuestro conjunto de datos.
 
@@ -406,9 +397,9 @@ Para realizar la validación cruzada se hará lo siguiente:
 4. Se calculará el error estándar de la media con el fin de obtener una estimación de la variabilidad de la media.
 5. Se seleccionará el hiperparámetro más simple cuyo valor medio más error estándar esté dentro del margen del valor máximo de precisión menos su error estándar. Por ejemplo, si el valor máximo es de $0.8 \pm 0.1$, se podrán seleccionar valores como $0.6 \pm 0.2$, ya que $0.6 + 0.2 > 0.8 - 0.1$.
 
-Para comprobar la eficacia de un conjunto de hiperparámetros hay que utilizar una métrica de evaluación. En nuestro caso, utilizaremos el F1-Score. Esta métrica es una media armónica de la precisión y la sensibilidad, y se calcula como $2 \times \frac{Precision \times Sensitivity}{Precision + Sensitivity}$. El F1-Score es una métrica más adecuada para problemas de clasificación binaria desbalanceada, como es nuestro caso, debido al balance que hace.
+Para comprobar la eficacia de un conjunto de hiperparámetros hay que utilizar una métrica de evaluación. En nuestro caso, utilizaremos el F1-Score. Esta métrica es una media armónica de la precisión y la sensibilidad, y se calcula como $2 \times \frac{Precision \times Sensitivity}{Precision + Sensitivity}$. El F1-Score es una métrica más adecuada para problemas de clasificación binaria desbalanceada, como es nuestro caso, debido al balance que hace. También se calculará el Accuracy, que aunque sea una métrica menos fiable es más fácil de interpretar.
 
-Después de realizar la validación con un vector $v_i$, se guardará una media del F1-Score y un error estándar de esta media, de forma que para cada conjunto de hiperparámetros $v_i$ se obtendrá un F1-Score medio y un error estándar asociado. Luego, se escogerá el vector de hiperparámetros más sencillos que contenga un F1-Score medio más error estándar dentro del margen del valor máximo de F1-Score menos su error estándar. Es decir, si tenemos un máximo de F1-Score de $0.8 \pm 0.1$, podremos seleccionar valores como $0.6 \pm 0.2$, ya que $0.6 + 0.2 > 0.8 - 0.1$.
+Después de realizar la validación con un vector $v_i$, se guardará una media del F1-Score (y el Accuracy) y un error estándar de esta media, de forma que para cada conjunto de hiperparámetros $v_i$ se obtendrá un F1-Score medio y un error estándar asociado. Luego, se escogerá el vector de hiperparámetros más sencillos que contenga un F1-Score medio más error estándar dentro del margen del valor máximo de F1-Score menos su error estándar. Es decir, si tenemos un máximo de F1-Score de $0.8 \pm 0.1$, podremos seleccionar valores como $0.6 \pm 0.2$, ya que $0.6 + 0.2 > 0.8 - 0.1$.
 
 
 # Bagging. {#bagging}
@@ -551,7 +542,7 @@ write.csv(crossvalidation.results, "crossvalidation_bagging.csv", row.names = FA
 Una vez hemos realizado la validación cruzda, vamos a representar los resultados y seleccionar los hiperparámetros que han obtenido el mejor F1-Score.
 ```{r}
 # Cargamos los resultados de la validación cruzada
-crossvalidation.results <- read.table("crossvalitadion_bagging.csv", header = TRUE, sep = ",")
+crossvalidation.results <- read.table("crossvalidation_bagging.csv", header = TRUE, sep = ",")
 
 # Seleccionamos los resultados para el F1-Score
 f1score.mean <- crossvalidation.results$mean_f1score
@@ -777,7 +768,7 @@ colnames(crossvalidation.results) <- c("mean_f1score", "se_f1score", "mean_accur
 crossvalidation.results <- cbind(v, crossvalidation.results)
 
 # Guardamos los resultados de la validación cruzada en un archivo
-write.csv(crossvalidation.results, "crossvalidation_neuralnetwork.csv", row.names = FALSE)
+write.csv(crossvalidation.results, "crossvalidation_neuralnetwork_2.csv", row.names = FALSE)
 
 crossvalidation.results
 ```
@@ -903,15 +894,16 @@ print(paste("Accuracy Red Neuronal: ", accuracy.nn, sep = ""))
 ```
 
 De primeras vemos que el modelo de Bagging tiene valores tanto de F1-Score como de Accuracy mayores que la Red Neuronal. Analizando las matrices de confusión vemos lo siguiente:
-- Con el modelo de Bagging se predice correctamente el 86.63% de las conexiones benignas y el 49.42% de las conexiones keylogger. Por otro lado, de los casos predichos como benignos el 71.89% eran correctos y de los casos predichos como keylogger 72.18%.
-- Con el modelo de Red Neuronal se predice correctamente el 78.48% de las conexiones benignas y el 46.89 de las conexiones keylogger. Por otro lado, de los casos predichos como benignos el 68.32 eran correctos y de los casos predichos como keylogger 59.87%.
+- Con el modelo de Bagging se predice correctamente el 85.98% de las conexiones benignas y el 52.29% de las conexiones keylogger. Por otro lado, de los casos predichos como benignos el 72.06% eran correctos y de los casos predichos como keylogger 72.77%.
+- Con el modelo de Red Neuronal se predice correctamente el 71.86% de las conexiones benignas y el 51.82% de las conexiones keylogger. Por otro lado, de los casos predichos como benignos el 67.75$ eran correctos y de los casos predichos como keylogger 56.51%.
 
-Con este análisis podemos ver que el modelo de Bagging ha obtenido mejores resultados que el modelo de Red Neuronal, tanto en precisión como en sensibilidad. Se puede ver tanto en el F1-Score como en la matriz de confusión. Aún así, ni siquiera el modelo de Bagging ha sido realmente bueno prediciendo las conexiones keylogger, con solo una precisión del 49.42%. Esto es muy cercano a elegir al azar (50% - 50%) si una conexión es maligna o no, que sería una probabilidad del 48% (ya que hay un 48% de casos positivos y un 52% de negativos en el conjunto de entrenamiento).
+Con eset análisis podemos ver que el modelo de Bagging ha obtenido resultados mejores que el modelo de Red Nueronal, tanto en precisión como en sensibilidad. Aún así, prediciendo los resultados positivos (keylogger) no ha sido realmente bueno, de hecho tiene el mismo desempeño que la Red Neuronal en precisión detectando keyloggers, poco más del 50%. Esto es muy cercando a elegir al azar (50% - 50%) si una conexión es maligna o no, que sería una probabilidad del 48% de ser maligna (ya que hay un 48% de casos positivos y un 52% de negativos en el conjunto de entrenamiento), tan solo un 4% mejor. Sin embargo, la sensibilidad dle modelo de Bagging es buena tanto para los casos benignos como los keylogger.
 
 Es posible que la Red Neuronal no haya sido muy eficaz debido a que no hemos trabajado con el dataset completo, sino con un subconjunto de los datos, ya que las redes neuronales necesitan una gran cantidad de datos para aprender correctamente. También es posible que con una gran cantidad de épocas el modelo hubiera crecido lentamente, acercándose muy poco a poco a un resultado óptimo.
 
 Respecto a simplicidad, el modelo de Bagging es más simple que la red neuronal. Necesita menos cantidad de hiperparámetos y es más rápido de entrenar. Además, es más sencillo de interpretar, por lo que es preferible de utilizar en el caso de dar buenos resultados. Puede ser que este modelo haya dado mejores resultados ya que el Random Forest (el tipo de Bagigng que hemos usado) escoge aleatoriamente los predictores que va a usar, reduciendo la dimensionalidad del problema que de por sí en este dataset es muy alta. Esta reducción de la dimensionalidad y la simplicidad del modelo han podido ser factores clave para que el modelo de Bagging haya dado mejores resultados que la Red Neuronal. En el caso de haber tenido una mayor cantidad de datos, o que las variables no hubieran estado apenas correlacionadas entre sí, el modelo de Red Neuronal podría haber dado mejores resultados.
 
+Vamos a analizar el modelo de Bagging para ver la importancia de las variables en la predicción.
 ```{r}
 # Análisis de importancia de variables
 importance_bagging <- importance(bag)
@@ -919,3 +911,5 @@ importance_bagging <- importance_bagging[order(importance_bagging, decreasing = 
 
 addmargins(table(mydf$Class, mydf$CWE.Flag.Count))
 ```
+
+Vemos que la variable más importante de "CWE.Flags.Count". Esto tiene sentido porque, como hemos visto en el [apartado 2](#preprocesamiento), esta variable tiene una correlación muy alta con la variable objetivo "Class". De hecho, siempre que el valor del predictor sea 1, la clase será Keylogger. 
